src/objects/Revenue_Schedule_Template_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cumulative_Value__c</fullName>
        <label>Cumulative Value</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Month Line Item</label>
        <referenceTo>Revenue_Schedule_Template_Line_Item__c</referenceTo>
        <relationshipLabel>Revenue Schedule Template Line Items</relationshipLabel>
        <relationshipName>Revenue_Schedule_Template_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Schedule_Template__c</fullName>
        <label>Revenue Schedule Template</label>
        <referenceTo>Revenue_Schedule_Template__c</referenceTo>
        <relationshipLabel>Revenue Schedule Template Line Items</relationshipLabel>
        <relationshipName>Revenue_Schedule_Template_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value_This_Month__c</fullName>
        <label>Value This Month</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Schedule Template Line Item</label>
    <nameField>
        <label>Revenue Schedule Template Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Schedule Template Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>